# TermGraph

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/fs/: listing.rs  mod.rs
src/graphics/: icons.rs  kitty.rs  mod.rs  protocol.rs  sixel.rs  thumbnails.rs
src/ui/: layout.rs  mod.rs
